Adding Navtitle to property to the posts and docs

--- a/_docs/azuread-b2c.adoc
+++ b/_docs/azuread-b2c.adoc
@@ -2,6 +2,7 @@
 :page-author: Isuru
 :page-created_date: 2021-03-06 06:20:00 -0500
 :page-categories: [jekyll, asciidoc]
+:page-navtitle: Azure B2C
 :toc:
 :sectanchors:
 :sectlinks:
