Adding lanyon theme as the base line and customize from there

--- a/_posts/2021-03-03-apples.md
+++ b/_posts/2021-03-03-apples.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: jill
-navtitle: Apple
+created-date: 2021-03-03
 ---
 An apple is a sweet, edible fruit produced by an apple tree.
 
