Adding titile attribute

--- a/_docs/azuread-b2c.adoc
+++ b/_docs/azuread-b2c.adoc
@@ -4,6 +4,7 @@
 :page-created-date: 2021-03-06
 :page-categories: [jekyll, asciidoc]
 :page-doctype: article
+:page-title: AzureAd B2C
 :sectanchors:
 :sectlinks:
 :toc:
