--- a/_posts/2021-03-03-apples.md
+++ b/_posts/2021-03-03-apples.md
@@ -1,7 +1,8 @@
 ---
-layout: post
+layout: posts
 author: jill
 created-date: 2021-03-03
+title: Apples
 ---
 An apple is a sweet, edible fruit produced by an apple tree.
 
