adding the tag support and tag generation for all pages, custom tag pages for all but the archive and the related posts only works for posts

--- a/_docs/azuread-b2c.adoc
+++ b/_docs/azuread-b2c.adoc
@@ -3,7 +3,7 @@
 :page-created-date: 2021-03-06
 :page-doctype: article
 :page-title: AzureAd B2C
-:page-tags: [azure, azureAD, b2c]
+:page-tags: [azure, azuread, b2c]
 :sectanchors:
 :sectlinks:
 :toc:
