--- a/_posts/2021-03-04-test.adoc
+++ b/_posts/2021-03-04-test.adoc
@@ -132,3 +132,28 @@ digraph g {
   n   |        |    |
       +--------+  <-+
 ----
+
+[plantuml, c4-diagram-test, svg]
+----
+
+!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Container.puml
+
+!define DEVICONS https://raw.githubusercontent.com/tupadr3/plantuml-icon-font-sprites/master/devicons
+!define FONTAWESOME https://raw.githubusercontent.com/tupadr3/plantuml-icon-font-sprites/master/font-awesome-5
+!include DEVICONS/angular.puml
+!include DEVICONS/java.puml
+!include DEVICONS/msql_server.puml
+!include FONTAWESOME/users.puml
+
+LAYOUT_WITH_LEGEND()
+
+Person(user, "Customer", "People that need products", "users")
+Container(spa, "SPA", "angular", "The main interface that the customer interacts with", "angular")
+Container(api, "API", "java", "Handles all business logic", "java")
+ContainerDb(db, "Database", "Microsoft SQL", "Holds product, order and invoice information", "msql_server")
+
+Rel(user, spa, "Uses", "https")
+Rel(spa, api, "Uses", "https")
+Rel_R(api, db, "Reads/Writes")
+
+----
