--- a/_notes/kroki-ide-configuration.adoc
+++ b/_notes/kroki-ide-configuration.adoc
@@ -3,7 +3,7 @@
 :page-created-date: 2021-03-18
 :page-doctype: article
 :page-title: How to Setup Local Ascii Diagram  Rendering on IntelliJ and WebStorm.
-:page-tags: [IntelliJ, WebStorm, howto, Kroki, ascii, adoc, diagrams, ascii-diagram, docker, BlockDiag, ActDiag, NwDiag, SeqDiag, Mermaid, BPMN, bytefield, c4plantuml, ditaa, erd, graphviz, dot, nomnoml, plantuml, svgbob, umlet, vega, vegalite, wavedrom]
+:page-tags: [intellij, webstorm, howto, kroki, ascii, adoc, diagrams, ascii-diagram, docker, blockdiag, actdiag, nwdiag, seqdiag, mermaid, bpmn, bytefield, c4plantuml, ditaa, erd, graphviz, dot, nomnoml, plantuml, svgbob, umlet, vega, vegalite, wavedrom]
 :sectanchors:
 :sectlinks:
 :toc:
@@ -21,7 +21,7 @@ Once the plugin is installed access:
 
     IntelliJ IDEA/ WebStorm -> Preferences -> Languages & Frameworks -> AsciiDoc
 
-* Check the ChekBox that says "Use Kroki to render diagrams instead of AsciiDoctor Diagram". Then, point to your own Kroki server or local docker endpoint, you can find the information on the local Kroki in this {local-kroki}[guide].
+* Check the ChekBox that says "Use Kroki to render diagrams instead of AsciiDoctor Diagram". Then, point to your own Kroki server or local docker endpoint, you can find the information on the local Kroki in this link:{local-kroki}[guide].
 
 Note:: If you leave the server url blank, the plugin will by default send all the diagram definitions to the remote Kroki.io server for processing.
 
