--- a/_posts/2021-03-03-apples.md
+++ b/_posts/2021-03-03-apples.md
@@ -11,3 +11,8 @@ the genus Malus. The tree originated in Central Asia, where its wild ancestor,
 Malus sieversii, is still found today. Apples have been grown for thousands of
 years in Asia and Europe, and were brought to North America by European
 colonists.
+
+## Testing emojis
+
+There are 5 thumbsups :+1: :+1:, :thumbsup:, :thumbsup:, :thumbs_up:
+There are 2 heart_eyes: :heart_eyes:, :heart_eyes:
