--- a/_posts/2021-03-04-test.adoc
+++ b/_posts/2021-03-04-test.adoc
@@ -178,5 +178,5 @@ streamAnalytics --> outputCosmosDb
 
 == Testing emojis
 
-//There are 5 thumbsups: :+1:! :+1:, :thumbsup:, :thumbsup:, :thumbs_up:
-//There are 2 heart_eyes: :heart_eyes:, :heart_eyes:
+There are 5 thumbsups: :+1:! :+1:, :thumbsup:, :thumbsup:, :thumbs_up:
+There are 2 heart_eyes: :heart_eyes:, :heart_eyes:
