Changes to test

--- a/_posts/2021-03-04-test.adoc
+++ b/_posts/2021-03-04-test.adoc
@@ -176,7 +176,7 @@ tripDataEventHub --> streamAnalytics
 streamAnalytics --> outputCosmosDb
 ----
 
-[plantuml, edr-test, svg]
+[plantuml, mindmap, svg]
 ----
 @startmindmap
 skinparam monochrome true
